--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>
-        Mets pessoais 2024</h1>
-</body>
-</html>
+        Metas pessoais 2024</h1>
+        <ul>
+            <li>ter boas notas</li>
+            <li>passar em vestibular</li>
+            <li>começar um curso</li>
+            <li>um emprego</li>
+        <ul>
+    </body>
+    </html>
