--- a/index.html
+++ b/index.html
@@ -7,13 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        Metas pessoais 2024</h1>
+    <h1> Metas pessoais 2024</h1>
         <ul>
-            <li>ter boas notas</li>
-            <li>passar em vestibular</li>
-            <li>começar um curso</li>
-            <li>um emprego</li>
-        <ul>
+
+        <li> 
+         <h2>ter boa notas</h2>
+         <h3></h3>
+         <h4>durante o ano</h4>
+    </li>
+
+    <li> 
+        <h2>passar no vestibular</h2>
+        <h3>pra entrar em uma faculade</h3>
+        <h4>ao fim do ano</h4>
+   </li>
+
+   <li> 
+       <h2>começar um curso</h2>
+       <h3>mais conhecimnto</h3>
+       <h4>esse ano</h4>
+   </li>
+
+   <li> 
+       <h2>um emprego</h2>
+       <h3>oportunidades</h3>
+       <h4>esse ano</h4>
+  </li>
+
+    </ul>
 </body>
 </html>
