--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <h1> Metas pessoais 2024</h1>
-        <ul>
+    <h1 class="link">
+        <a href="metas.html">link do cronometro de metas</a>
+    </h1>
 
+    </ul>
         <li> 
          <h2>ter boa notas</h2>
-         <h3></h3>
+         <h3>estudar muito</h3>
          <h4>durante o ano</h4>
     </li>
 
