--- a/metas.html
+++ b/metas.html
@@ -1,20 +1,44 @@
-<!DOCTYPE html >
-<html lang = "pt-br" >
+<!DOCTYPE html>
+<html lang="pt-br">
+
 <head>
-<meta charset = "UTF-8" >
-<meta name = "viewport" content = "width=device-width, initial-scale=1.0" >
-<title> Metas 2024 </title>
-<link rel = "stylesheet" href = "style-metas.css" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Metas 2024 </title>
+    <link rel="stylesheet" href="style-metas.css">
 </head>
+
 <body>
-<section class = "conteudo-principal" >
-<h2 class = "titulo-principal" > Meus Objetivos do ano <span> _ </span></h2>
-<div class = "botoes" >
-<button class = "botao ativo" > Cursos na Alura </button>
-<button class = "botao" > Criar projetos no javascript </button>
-<button class = "botao" > Criar um portfólio </button>
-<button class = "botao" > Atualizar meu currículo </button>
-</div>
-</section>
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal"> Meus Objetivos do ano <span> _ </span></h2>
+        <div class="botoes">
+            <button class="botao ativo"> Cursos na Alura </button>
+            <button class="botao"> Criar projetos no javascript </button>
+            <button class="botao"> Criar um portfólio </button>
+            <button class="botao"> Atualizar meu currículo </button>
+        </div>
+    </section>
+
+    <div class="abas-textos">
+        <div class="aba conteudo">
+            <h3 class="aba-conteudo-titulo-principal">meta</h3>
+            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+        </div>
+        <div class="aba conteudo">
+            <h3 class="aba-conteudo-titulo-principal">meta</h3>
+            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+        </div>
+        <div class="aba conteudo">
+            <h3 class="aba-conteudo-titulo-principal">meta</h3>
+            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+        </div>
+        <div class="aba conteudo">
+            <h3 class="aba-conteudo-titulo-principal">meta</h3>
+            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
+
 </html>
