--- a/metas.html
+++ b/metas.html
@@ -21,20 +21,20 @@
 
     <div class="abas-textos">
         <div class="aba conteudo">
-            <h3 class="aba-conteudo-titulo-principal">meta</h3>
-            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+            <h3 class="aba-conteudo-titulo-principal">ter boas notas</h3>
+            <h4 class="aba-conteudo-titulo-secundario">durante o ano</h3>
         </div>
         <div class="aba conteudo">
-            <h3 class="aba-conteudo-titulo-principal">meta</h3>
-            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+            <h3 class="aba-conteudo-titulo-principal">passar no vestibular</h3>
+            <h4 class="aba-conteudo-titulo-secundario">esse ano</h3>
         </div>
         <div class="aba conteudo">
-            <h3 class="aba-conteudo-titulo-principal">meta</h3>
-            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+            <h3 class="aba-conteudo-titulo-principal">começar um curso</h3>
+            <h4 class="aba-conteudo-titulo-secundario">esse ano</h3>
         </div>
         <div class="aba conteudo">
-            <h3 class="aba-conteudo-titulo-principal">meta</h3>
-            <h4 class="aba-conteudo-titulo-secundario">meta</h3>
+            <h3 class="aba-conteudo-titulo-principal">um emprego</h3>
+            <h4 class="aba-conteudo-titulo-secundario">proximos anos</h3>
 
         </div>
     </div>
