--- a/metas.html
+++ b/metas.html
@@ -12,10 +12,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal"> Meus Objetivos do ano <span> _ </span></h2>
         <div class="botoes">
-            <button class="botao ativo"> Cursos na Alura </button>
-            <button class="botao"> Criar projetos no javascript </button>
-            <button class="botao"> Criar um portfólio </button>
-            <button class="botao"> Atualizar meu currículo </button>
+            <button class="botao ativo"> ter boas notas </button>
+            <button class="botao"> passar no vestibular </button>
+            <button class="botao"> Começar um curso</button>
+            <button class="botao"> um emprego</button>
         </div>
     </section>
 
