--- a/metas.html
+++ b/metas.html
@@ -17,7 +17,7 @@
             <button class="botao"> Começar um curso</button>
             <button class="botao"> um emprego</button>
         </div>
-    </section>
+    
 
     <div class="abas-textos">
         <div class="aba conteudo">
@@ -42,6 +42,8 @@
 
         </div>
     </div>
+</div>
+</section>
     <script src="main.js"></script>
 </body>
 
